# swagger.json
@@ -3,17 +3,17 @@
     "info": {
       "version": "1.0.0",
       "title": "My User Project CRUD",
-      "description": "My User Project Application API",
-      "license": {
-        "name": "MIT",
-        "url": "https://opensource.org/licenses/MIT"
-      }
+      "description": "My User Project Application API"
     },
     "host": "localhost:8000",
     "basePath": "/",
     "tags": [
       {
         "name": "Users",
+        "description": "API for users in the system"
+      },
+      {
+        "name": "Pay",
         "description": "API for users in the system"
       }
     ],
@@ -56,6 +56,7 @@
           }
         } 
       },
+
       "/users": {
         "get": {
             "tags": [
@@ -81,47 +82,40 @@
             "description": "ID of user that we want to find",
             "type": "integer"
           }
-        ],
-        "delete": {
-          "summary": "Delete user with given ID",
+        ]
+      },
+      "/addPay": {
+        "post": {
           "tags": [
-            "Users"
+            "Pay"
           ],
-          "responses": {
-            "200": {
-              "description": "User is deleted",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          }
-        },
-        "put": {
-          "summary": "Update user with give ID",
-          "tags": [
-            "Users"
-          ],
+          "description": "Create new Pay in system",
           "parameters": [
             {
-              "name": "user",
+              "name": "Pay",
               "in": "body",
-              "description": "User with new values of properties",
+              "description": "User that we want to create",
               "schema": {
-                "$ref": "#/definitions/updateUser"
+                "$ref": "#/definitions/User"
               }
             }
           ],
+          "produces": [
+            "application/json"
+          ],
           "responses": {
             "200": {
-              "description": "User is updated",
+              "description": "New user is created",
               "schema": {
                 "$ref": "#/definitions/User"
               }
             }
           }
-        }
+        } 
       }
     },
+
+    
     "definitions": {
       "User": {
         "required": [
